@@ -14,14 +14,11 @@
 
 package com.liferay.portal.module.framework;
 
-import com.liferay.portal.kernel.util.CharPool;
-import com.liferay.portal.kernel.util.StringPool;
-import com.liferay.portal.kernel.util.StringUtil;
-import com.liferay.portal.kernel.util.URLCodec;
 import com.liferay.portal.util.PropsValues;
 
 import java.io.File;
 
+import java.net.URI;
 import java.net.URL;
 
 /**
@@ -43,21 +40,9 @@ public class RuntimeClassPathResolver implements ClassPathResolver {
 		URL[] urls = new URL[files.length];
 
 		for (int i = 0; i < urls.length; i++) {
+			URI uri = files[i].toURI();
 
-			// Ensure URLs are properly composed for Windows environments.
-			// Otherwise, we will run into unexpected errors when referencing a
-			// class from a JSP. See LPS-61210 for more information.
-
-			String path = StringUtil.replace(
-				files[i].getAbsolutePath(), CharPool.BACK_SLASH,
-				CharPool.SLASH);
-
-			if (!path.startsWith(StringPool.SLASH)) {
-				path = StringPool.SLASH + path;
-			}
-
-			urls[i] = new URL(
-				"file", null, URLCodec.encodeURL(path, StringPool.UTF8, true));
+			urls[i] = uri.toURL();
 		}
 
 		return urls;
